--- a/FinalProject.Web/Views/Post/_DeleteCommentModal.cshtml
+++ b/FinalProject.Web/Views/Post/_DeleteCommentModal.cshtml
@@ -1,6 +1,7 @@
 @model Comment
 
-<div class="modal fade" id="deleteCommentModal-@Model.Id" tabindex="-1" aria-labelledby="deleteCommentModalLabel-@Model.Id" aria-hidden="true">
+<div class="modal fade" id="deleteCommentModal-@Model.Id" tabindex="-1"
+    aria-labelledby="deleteCommentModalLabel-@Model.Id" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
