--- a/FinalProject.Web/Views/Post/Edit.cshtml
+++ b/FinalProject.Web/Views/Post/Edit.cshtml
@@ -2,9 +2,12 @@
 
 <div class="card shadow p-4 mt-5 mx-auto w-75">
 
-     <div class="position-absolute top-0 start-50 translate-middle rounded-circle bg-green p-2 lock-image">
-        <svg class="text-white" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M12 15V17M6 21H18C19.1046 21 20 20.1046 20 19V13C20 11.8954 19.1046 11 18 11H6C4.89543 11 4 11.8954 4 13V19C4 20.1046 4.89543 21 6 21ZM16 11V7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7V11H16Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+    <div class="position-absolute top-0 start-50 translate-middle rounded-circle bg-green p-2 lock-image">
+        <svg class="text-white" width="28" height="28" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M12 15V17M6 21H18C19.1046 21 20 20.1046 20 19V13C20 11.8954 19.1046 11 18 11H6C4.89543 11 4 11.8954 4 13V19C4 20.1046 4.89543 21 6 21ZM16 11V7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7V11H16Z"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
         </svg>
     </div>
 
@@ -47,50 +50,10 @@
 
         <div class=" mt-3">
             <input type="submit" value="Create" class="btn btn-green" />
-            
+
             <a class="btn btn-link ms-3" asp-controller="Post" asp-action="Index">Cancel</a>
         </div>
-            
-    </form>
-</div>
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    } 
-}
-
-
-@* @model Post
-
-<div class="card shadow p-4 mt-5 mx-auto w-75">
-    <h3>Edit Post</h3>
-
-    <form asp-action="Edit" method="post">
-        <input type="hidden" asp-for="Id" />
-        
-        <div class="form-group">
-            <label asp-for="Title" class="form-label">Title</label>
-            <input asp-for="Title" class="form-control" />
-            <span asp-validation-for="Title" class="text-danger"></span>
-        </div>
-
-        <div class="form-group mt-3">
-            <label asp-for="Content" class="form-label">Post</label>
-            <textarea asp-for="Content" class="form-control"></textarea>
-            <span asp-validation-for="Content" class="text-danger"></span>
-        </div>
-
-        <div class="mt-3">
-            <label asp-for="ImagePath" class="form-label"></label>
-            <input asp-for="ImagePath" type="url" class="form-control" />
-            <span asp-validation-for="ImagePath" class="text-danger"></span>
-        </div>
-
-        <div class="mt-3">
-            <input type="submit" value="Save Changes" class="btn btn-primary" />
-            <a class="btn btn-link ms-3" asp-controller="Post" asp-action="Details" asp-route-id="@Model.Id">Cancel</a>
-        </div>
     </form>
 </div>
 
@@ -98,4 +61,4 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-} *@
+}
