--- a/FinalProject.Web/Views/Post/_DeleteModal.cshtml
+++ b/FinalProject.Web/Views/Post/_DeleteModal.cshtml
@@ -1,47 +1,22 @@
 @model Post
 
-<div class="modal fade" id="deleteModal-@Model.Id" tabindex="-1" aria-labelledby="deleteModalLabel-@Model.Id" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="deleteModalLabel-@Model.Id">Confirm Delete</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>Are you sure you want to delete the post titled: <Strong>@Model.Title</Strong>?</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <form asp-action="DeleteConfirm" method="post">
-                    <button type="submit" class="btn btn-danger">Delete</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-
-@* @model Post
-
-<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="delete modal" aria-hidden="true">
+<div class="modal fade" id="deleteModal-@Model.Id" tabindex="-1" aria-labelledby="deleteModalLabel-@Model.Id"
+  aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="deleteModal">Confirm Delete</h1>
+        <h5 class="modal-title" id="deleteModalLabel-@Model.Id">Confirm Delete</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-
       <div class="modal-body">
-        <p>Are you sure you want to delete @Model.Title?</p>
+        <p>Are you sure you want to delete the post titled: <Strong>@Model.Title</Strong>?</p>
       </div>
       <div class="modal-footer">
-        <form asp-action="DeleteConfirm" asp-route-id=@Model.Id>
-          <button type="submit" class="btn btn-danger" aria-label="delete">
-            Delete
-          </button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-            Cancel
-          </button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <form asp-action="DeleteConfirm" method="post">
+          <button type="submit" class="btn btn-danger">Delete</button>
         </form>
       </div>
     </div>
   </div>
-</div> *@
+</div>
